--- a/real_time_django/templates/users/user_detail.html
+++ b/real_time_django/templates/users/user_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 
-{% block title %}{{ object.username }}{% endblock %}
+{% block title %}{{ object.name }}{% endblock %}
 
 {% block content %}
 <div class="bg-palette-light dark:bg-palette-dark min-h-screen p-8">
@@ -14,15 +14,15 @@
           <div class="flex items-end space-x-4">
             <div class="h-24 w-24 rounded-full border-4 border-white dark:border-palette-light overflow-hidden bg-white dark:bg-palette-dark">
               {% if object.avatar %}
-                <img class="h-full w-full object-cover" src="{{ object.avatar.url }}" alt="{{ object.username }}">
+                <img class="h-full w-full object-cover" src="{{ object.avatar.url }}" alt="{{ object.name }}">
               {% else %}
                 <div class="h-full w-full flex items-center justify-center bg-palette-sand dark:bg-palette-navy text-2xl text-palette-navy dark:text-palette-light">
-                  {{ object.username|first|upper }}
+                  {{ object.name|first|upper }}
                 </div>
               {% endif %}
             </div>
             <div class="pb-2">
-              <h1 class="text-2xl font-bold text-white">{{ object.username }}</h1>
+              <h1 class="text-2xl font-bold text-white">{{ object.name }}</h1>
               <p class="text-palette-light">{{ object.name }}</p>
             </div>
           </div>
